--- a/dashfront/src/index.html
+++ b/dashfront/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Dashfront</title>
-  <base href="/">
+  <title>SATNET</title>
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="en_entier_blanc.png">
+  <link rel="shortcut icon" type="image/x-icon" href="en_entier_blanc.png">
+
 </head>
 <body>
   <app-root></app-root>
