--- a/dashfront/src/index.html
+++ b/dashfront/src/index.html
@@ -5,8 +5,8 @@
   <title>SATNET</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="en_entier_blanc.png">
-  <link rel="shortcut icon" type="image/x-icon" href="en_entier_blanc.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 <body>
