--- a/dashfront/src/index.html
+++ b/dashfront/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <app-header></app-header>
+  <app-select-satellites></app-select-satellites>
   <app-googlemaps></app-googlemaps>
   <app-footer></app-footer>
 </body>
