--- a/dashfront/src/index.html
+++ b/dashfront/src/index.html
@@ -8,10 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link href="/assets/css/nucleo-icons.css" rel="stylesheet">
 
 </head>
 
 <body>
+  <app-header></app-header>
   <app-select-satellites></app-select-satellites>
   <app-googlemaps></app-googlemaps>
   <app-footer></app-footer>
